data/derived/sp14/progs/unify/prog1247.ml.out
Characters 122-123:
  bigAdd (a::0) multres
             ^
Error: This expression has type int but an expression was expected of type
         int list
